--- a/.gitignore
+++ b/.gitignore
@@ -1,76 +1,32 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Dependencies
-node_modules/
+# Virtual environment
+.venv/
 venv/
 env/
-ENV/
-.venv
-
-# Build outputs
-dist/
-dist-ssr/
-build/
-*.local
-
-# Database
-*.sqlite3
-*.db
-db.sqlite3
 
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
 *.so
-.Python
-*.egg-info/
-.eggs/
+
+# Database
+*.sqlite3
 
 # Django
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-/media
-/staticfiles
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-*.env
+staticfiles/
+media/
 
 # IDE
-.vscode/*
-!.vscode/extensions.json
+.vscode/
 .idea/
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
 *.sw?
-
-# Secrets and tokens
-secrets.json
-*.key
-*.pem
-config.json
-credentials.json
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Temporary files
-*.tmp
-*.temp
-.cache/
+# Env files
+.env
+*.env
+
+# Logs
+*.log
