--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,6 @@ Django==4.2.7
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 python-dotenv==1.0.0
-numpy==1.24.3
-scikit-learn==1.3.2
-Pillow==10.1.0
+numpy>=1.26.0
+scikit-learn>=1.3.2
+Pillow>=10.1.0
