--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,8 @@
-.venv/
-venv/
-__pycache__/
+__pycache__
 *.pyc
-*.sqlite3
-.git/
-.gitignore
+*.pyo
+backend/venv
+backend/db.sqlite3
+.venv
+.git
 *.md
-staticfiles/
-media/
